tentative contrast fix

--- a/components/styles.global.scss
+++ b/components/styles.global.scss
@@ -70,5 +70,5 @@
 }
 
 ._X0nwb {
-  background: #dedede;
+  background: #fff;
 }
